backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: todo
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: backend:v1.0
        ports:
        - containerPort: 3001
        resources:
          requests:
            memory: "64Mi"  # Request 64 MiB of memory
            cpu: "100m"     # Request 100 milliCPU (0.1 CPU)
          limits:
            memory: "1Gi"   # Limit memory to 1 GiB
            cpu: "1"        # Limit CPU usage to 1 core
