mongodb.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: todo
  labels:
    app: mongodb
spec:
  serviceName: mongodb
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:6.0
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongodb-storage
              mountPath: /data/db
          resources:
            requests:
              memory: "64Mi"  # Request 64 MiB of memory
              cpu: "100m"     # Request 100 milliCPU (0.1 CPU)
            limits:
              memory: "1Gi"   # Limit memory to 1 GiB
              cpu: "1"        # Limit CPU usage to 1 core
  volumeClaimTemplates:
    - metadata:
        name: mongodb-storage
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 10Gi  # Persistent storage size
        storageClassName: ebs-sc  # Name of your StorageClass
