mongo_service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
spec:
  clusterIP: None  # This makes the service headless
  selector:
    app: mongodb  # Match pods with the label "app: my-app"
  ports:
    - protocol: TCP
      port: 27017         # Expose port 80
      targetPort: 27017  # Map to container's port 8080
